--- a/assets/style.css
+++ b/assets/style.css
@@ -94,6 +94,11 @@ html {
 }
 
 /* service section */
+.service {
+    background-color: #f5f5f5;
+    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.2);
+}
+
 .card-grid-6 {
     display: grid;
     grid-template-columns: repeat(5, 1fr)
@@ -114,23 +119,19 @@ html {
 
 .service-item__name {
     font-size: 1.8rem;
-    font-weight: bold;
     margin: 2rem 0;
     color: var(--dark-text);
 }
 
 .gallery-wrapper {
     display: flex;
+    overflow-x: auto;
     margin: 0 8rem;
 }
 
-.gallery-item {
-    width: 232px;
-    margin-right: 10px;
-}
-
-.gallery-item img {
-    width: 100%;
-    height: 100%;
+.gallery-wrapper img {
+    width: 235px;
+    height: 235px;
+    padding-right: 10px;
     object-fit: cover;
 }
