added room page

--- a/assets/style.css
+++ b/assets/style.css
@@ -59,6 +59,7 @@ section {
     text-transform: uppercase;
     font-weight: bolder;
     margin-bottom: 3rem;
+    margin-top: 8.5rem;
 }
 
 .btn {
