--- a/assets/style.css
+++ b/assets/style.css
@@ -120,6 +120,22 @@ section {
     color: var(--white);
 }
 
+.header .navbar .btnLogin-popup {
+    display: inline-block;
+    margin-top: 1rem;
+    padding: 1rem 3rem;
+    background: var(--primary);
+    border-radius: .5rem;
+    color: var(--white);
+    font-size: 1.7rem;
+    cursor: pointer;
+}
+
+.header .navbar .btnLogin-popup:hover{
+    color: var(--white);
+    background: var(--secondary);
+}
+
 #menu-btn{
     display: none;
     font-size: 2.5rem;
@@ -673,3 +689,187 @@ section {
 
 
 /* end */
+
+/* Login, Register*/
+.wrapper {
+    position: relative;
+    width: 400px;
+    height: 440px;
+    background: transparent;
+    border-radius: 20px;
+    backdrop-filter: blur(20px);
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    margin: auto;
+    transform: scale(0);
+    transition: transform .5s ease, height .2s ease;
+}
+
+.wrapper.active-popup {
+    transform: scale(1);
+}
+
+.wrapper.active {
+    height: 520px;
+}
+
+.wrapper .form-box {
+    width: 100%;
+    padding: 40px;
+}
+
+.wrapper .form-box.login {
+    transition: transform .18s ease;
+    transform: translateX(0);
+    /* display: none; */
+}
+
+.wrapper.active .form-box.login {
+    transition: none;
+    transform: translateX(-400px);
+    /* transform: translateX(0); */
+}
+
+.wrapper .form-box.register {
+    position: absolute;
+    transition: none;
+    transform: translateX(400px);
+}
+
+.wrapper.active .form-box.register {
+    transition: transform .18s ease;
+    transform: translateX(0);
+    /* display: none; */
+}
+
+.wrapper .icon-close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 45px;
+    height: 45px;
+    background: var(--dark-text);
+    font-size: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--white);
+    border-bottom-left-radius: 20px;
+    cursor: pointer;
+    z-index: 1;
+}
+
+.form-box h2 {
+    font-size: 3rem;
+    color: var(--dark-text);
+    text-align: center;
+}
+
+.input-box {
+    position: relative;
+    width: 100%;
+    height: 30px;
+    border-bottom: 2px solid var(--dark-text);
+    margin: 30px 0;
+}
+
+.input-box label {
+    position: absolute;
+    top: 50%;
+    left: 25px;
+    transform: translateY(-50%);
+    font-size: 1.5rem;
+    color: var(--dark-text);
+    font-weight: 500;
+    pointer-events: none;
+    transition: 0.5s;
+}
+
+.input-box input:focus~label,
+.input-box input:valid~label {
+    top: -8px;
+}
+
+.input-box input {
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: none;
+    outline: none;
+    font-size: 1.5rem;
+    color: var(--dark-text);
+    font-weight: 600;
+    padding: 0 35px 0 25px;
+}
+
+.input-box .icon {
+    position: absolute;
+    left: 8px;
+    font-size: 1.5rem;
+    color: var(--dark-text);
+    line-height: 30px;   
+}
+
+.input-box .icon-right {
+    position: absolute;
+    right: 8px;
+    font-size: 1.5rem;
+    color: var(--dark-text);
+    line-height: 30px;   
+    cursor: pointer;
+}
+
+.remember-forgot {
+    font-size: 1.5rem;
+    color: var(--dark-text);
+    font-weight: 500;
+    margin: -15px 0 15px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.remember-forgot label input {
+    accent-color: var(--dark-text);
+    margin-right: 3px;
+}
+
+.remember-forgot a {
+    color: var(--dark-text);
+    text-decoration: none;
+}
+
+.remember-forgot a:hover {
+    text-decoration: underline;
+}
+
+.btnButton {
+    width: 100%;
+    height: 45px;
+    background: var(--primary);
+    border-radius: .5rem;
+    color: var(--white);
+    font-size: 1.7rem;
+    cursor: pointer;
+    border: none;
+    outline: none;
+}
+
+.login-register {
+    font-size: 1.5rem;
+    color: var(--dark-text);
+    font-weight: 500;
+    margin: 25px 0 10px;
+    text-align: center;
+}
+
+.login-register a {
+    color: var(--dark-text);
+    text-decoration: none;
+}
+
+.login-register a:hover {
+    text-decoration: underline;
+}
